syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Sepcifier ExtDecList SEMI
    5       | Sepcifier SEMI
    6       | Sepcifier FuncDec Compst
    7       | Sepcifier error SEMI
    8       | Sepcifier error
    9       | error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Sepcifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT error RC SEMI

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FuncDec: ID LP VarList RP
   24        | ID LP RP
   25        | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Sepcifier VarDec

   29 Compst: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | Exp error SEMI
   34     | Exp error RC
   35     | Compst
   36     | RETURN Exp SEMI
   37     | RETURN error SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Sepcifier DecList SEMI
   44    | Sepcifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | NEGETIVE Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp LB error RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 16 22 25 33 34 37 44 63
INT (258) 21 66
FLOAT (259) 67
ID (260) 17 19 20 23 24 25 60 61 64 65
SEMI (261) 4 5 7 16 32 33 36 37 43 44
COMMA (262) 11 26 46 68
ASSIGNOP (263) 48 49
RELOP (264) 52
PLUS (265) 53
STAR (266) 55
DIV (267) 56
AND (268) 50
OR (269) 51
DOT (270) 64
NOT (271) 59
TYPE (272) 12
LP (273) 23 24 25 38 39 40 57 60 61
RP (274) 23 24 25 38 39 40 57 60 61
LB (275) 21 22 62 63
RB (276) 21 22 62 63
LC (277) 14 29
RC (278) 14 16 29 34
STRUCT (279) 14 15 16
RETURN (280) 36 37
IF (281) 38 39
ELSE (282) 39
WHILE (283) 40
MINUS (284) 54
NEGETIVE (285) 58
LOWER_THEN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11, on right: 4 11
Sepcifier (37)
    on left: 12 13, on right: 4 5 6 7 8 28 43 44
StructSpecifier (38)
    on left: 14 15 16, on right: 13
OptTag (39)
    on left: 17 18, on right: 14
Tag (40)
    on left: 19, on right: 15
VarDec (41)
    on left: 20 21 22, on right: 10 11 21 22 28 47 48
FuncDec (42)
    on left: 23 24 25, on right: 6
VarList (43)
    on left: 26 27, on right: 23 26
ParamDec (44)
    on left: 28, on right: 26 27
Compst (45)
    on left: 29, on right: 6 35
StmtList (46)
    on left: 30 31, on right: 29 30
Stmt (47)
    on left: 32 33 34 35 36 37 38 39 40, on right: 30 38 39 40
DefList (48)
    on left: 41 42, on right: 14 29 41
Def (49)
    on left: 43 44, on right: 41
DecList (50)
    on left: 45 46, on right: 43 46
Dec (51)
    on left: 47 48, on right: 45 46
Exp (52)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67, on right: 32 33 34 36 38 39 40 48 49 50 51 52 53 54 55 56 57
    58 59 62 63 64 68 69
Args (53)
    on left: 68 69, on right: 60 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Sepcifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error .

    $default  reduce using rule 9 (ExtDef)


State 2

   12 Sepcifier: TYPE .

    $default  reduce using rule 12 (Sepcifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . error RC SEMI

    error  shift, and go to state 9
    ID     shift, and go to state 10

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Sepcifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Sepcifier . ExtDecList SEMI
    5       | Sepcifier . SEMI
    6       | Sepcifier . FuncDec Compst
    7       | Sepcifier . error SEMI
    8       | Sepcifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FuncDec     go to state 20


State 8

   13 Sepcifier: StructSpecifier .

    $default  reduce using rule 13 (Sepcifier)


State 9

   16 StructSpecifier: STRUCT error . RC SEMI

    RC  shift, and go to state 21


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    7 ExtDef: Sepcifier error . SEMI
    8       | Sepcifier error .

    SEMI  shift, and go to state 23

    $default  reduce using rule 8 (ExtDef)


State 16

   20 VarDec: ID .
   23 FuncDec: ID . LP VarList RP
   24        | ID . LP RP
   25        | ID . LP error RP

    LP  shift, and go to state 24

    $default  reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Sepcifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Sepcifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Sepcifier FuncDec . Compst

    LC  shift, and go to state 28

    Compst  go to state 29


State 21

   16 StructSpecifier: STRUCT error RC . SEMI

    SEMI  shift, and go to state 30


State 22

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Sepcifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 23

    7 ExtDef: Sepcifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 24

   23 FuncDec: ID LP . VarList RP
   24        | ID LP . RP
   25        | ID LP . error RP

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Sepcifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 25

    4 ExtDef: Sepcifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 27

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 41
    INT    shift, and go to state 42


State 28

   29 Compst: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Sepcifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 33


State 29

    6 ExtDef: Sepcifier FuncDec Compst .

    $default  reduce using rule 6 (ExtDef)


State 30

   16 StructSpecifier: STRUCT error RC SEMI .

    $default  reduce using rule 16 (StructSpecifier)


State 31

   43 Def: Sepcifier . DecList SEMI
   44    | Sepcifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 32

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 33

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Sepcifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 33


State 34

   25 FuncDec: ID LP error . RP

    RP  shift, and go to state 50


State 35

   24 FuncDec: ID LP RP .

    $default  reduce using rule 24 (FuncDec)


State 36

   28 ParamDec: Sepcifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 51


State 37

   23 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 38

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 27 (VarList)


State 39

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 40

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 41

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 42

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 43

   29 Compst: LC DefList . StmtList RC

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    LC        shift, and go to state 28
    RETURN    shift, and go to state 61
    IF        shift, and go to state 62
    WHILE     shift, and go to state 63
    NEGETIVE  shift, and go to state 64

    $default  reduce using rule 31 (StmtList)

    Compst    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 44

   44 Def: Sepcifier error . SEMI

    SEMI  shift, and go to state 69


State 45

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 27

    $default  reduce using rule 47 (Dec)


State 46

   43 Def: Sepcifier DecList . SEMI

    SEMI  shift, and go to state 71


State 47

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 45 (DecList)


State 48

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 49

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 50

   25 FuncDec: ID LP error RP .

    $default  reduce using rule 25 (FuncDec)


State 51

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Sepcifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 28 (ParamDec)


State 52

   23 FuncDec: ID LP VarList RP .

    $default  reduce using rule 23 (FuncDec)


State 53

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Sepcifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 38


State 54

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 55

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 56

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 57

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 58

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 65 (Exp)


State 59

   59 Exp: NOT . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 75


State 60

   57 Exp: LP . Exp RP

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 76


State 61

   36 Stmt: RETURN . Exp SEMI
   37     | RETURN . error SEMI

    error     shift, and go to state 77
    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 78


State 62

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 63

   40 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 64

   58 Exp: NEGETIVE . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 81


State 65

   35 Stmt: Compst .

    $default  reduce using rule 35 (Stmt)


State 66

   29 Compst: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 67

   30 StmtList: Stmt . StmtList

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    LC        shift, and go to state 28
    RETURN    shift, and go to state 61
    IF        shift, and go to state 62
    WHILE     shift, and go to state 63
    NEGETIVE  shift, and go to state 64

    $default  reduce using rule 31 (StmtList)

    Compst    go to state 65
    StmtList  go to state 83
    Stmt      go to state 67
    Exp       go to state 68


State 68

   32 Stmt: Exp . SEMI
   33     | Exp . error SEMI
   34     | Exp . error RC
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    error     shift, and go to state 84
    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    MINUS     shift, and go to state 95


State 69

   44 Def: Sepcifier error SEMI .

    $default  reduce using rule 44 (Def)


State 70

   48 Dec: VarDec ASSIGNOP . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 96


State 71

   43 Def: Sepcifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 72

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 97
    Dec      go to state 47


State 73

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 74

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    RP        shift, and go to state 98
    NEGETIVE  shift, and go to state 64

    Exp   go to state 99
    Args  go to state 100


State 75

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 59 (Exp)


State 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 101
    LB        shift, and go to state 94
    MINUS     shift, and go to state 95


State 77

   37 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 102


State 78

   36 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    MINUS     shift, and go to state 95


State 79

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 104


State 80

   40 Stmt: WHILE LP . Exp RP Stmt

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 105


State 81

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | NEGETIVE Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 58 (Exp)


State 82

   29 Compst: LC DefList StmtList RC .

    $default  reduce using rule 29 (Compst)


State 83

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 84

   33 Stmt: Exp error . SEMI
   34     | Exp error . RC

    SEMI  shift, and go to state 106
    RC    shift, and go to state 107


State 85

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 86

   49 Exp: Exp ASSIGNOP . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 108


State 87

   52 Exp: Exp RELOP . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 109


State 88

   53 Exp: Exp PLUS . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 110


State 89

   55 Exp: Exp STAR . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 111


State 90

   56 Exp: Exp DIV . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 112


State 91

   50 Exp: Exp AND . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 113


State 92

   51 Exp: Exp OR . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 114


State 93

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 115


State 94

   62 Exp: Exp LB . Exp RB
   63    | Exp LB . error RB

    error     shift, and go to state 116
    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 117


State 95

   54 Exp: Exp MINUS . Exp

    INT       shift, and go to state 56
    FLOAT     shift, and go to state 57
    ID        shift, and go to state 58
    NOT       shift, and go to state 59
    LP        shift, and go to state 60
    NEGETIVE  shift, and go to state 64

    Exp  go to state 118


State 96

   48 Dec: VarDec ASSIGNOP Exp .
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    MINUS     shift, and go to state 95

    $default  reduce using rule 48 (Dec)


State 97

   46 DecList: Dec COMMA DecList .

    $default  reduce using rule 46 (DecList)


State 98

   61 Exp: ID LP RP .

    $default  reduce using rule 61 (Exp)


State 99

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID
   68 Args: Exp . COMMA Args
   69     | Exp .
